# gpt2-shakespeare

./: .gitignore  README.md  pyproject.toml
notebooks/: prototype.ipynb
requirements/: requirements.txt
requirements/train/: conda-environment.yaml  requirements.txt
src/gpt_2_shakespeare/: params.py
src/gpt_2_shakespeare/inference/: inference.py
src/gpt_2_shakespeare/scripts/: generate.py  train.py
src/gpt_2_shakespeare/training/: trainer.py
src/gpt_2_shakespeare/utils/: params.py
src/gpt_2_shakespeare_service/: service.py
src/gpt_2_shakespeare_service/scripts/: serve.py
